@@ -3,12 +3,10 @@ package com.example.Backend.result;
 import com.example.Backend.answer.Answer;
 import com.example.Backend.answer.AnswerRepository;
 import com.example.Backend.dto.ResultResponseDto;
-import com.example.Backend.question.Question;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,19 +14,22 @@ public class ResultService {
 
     private final AnswerRepository answerRepository;
 
-    public List<ResultResponseDto> getUserResults(Long userId) {
+    public ResultResponseDto getUserResults(Long userId) {
         List<Answer> answers = answerRepository.findByUserId(userId);
 
-        return answers.stream()
-                .map(answer -> {
-                    Question question = answer.getQuestion();
-                    return new ResultResponseDto(
-                            question.getId(),
-                            question.getContent(),
-                            question.getModelAnswer(),
-                            answer.getUserAnswer()
-                    );
-                })
-                .collect(Collectors.toList());
+        List<ResultDto> result = answers.stream()
+                .map(answer -> new ResultDto(
+                        answer.getQuestion().getId(),
+                        answer.getQuestion().getContent(),
+                        answer.getQuestion().getModelAnswer(),
+                        answer.getUserAnswer()
+                ))
+                .toList();
+
+        return new ResultResponseDto(
+                userId,
+                result.size(),
+                result
+        );
     }
 }
